force-app/main/default/objects/Opportunity/fields/Project_80_Complete__c.field-meta.xml
<CustomField>
    <fullName>Project_80_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project_80_Complete</label>
    <type>Checkbox</type>
</CustomField>