force-app/main/default/objects/Opportunity/fields/Project_80_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_80_Complete_Date__c</fullName>
    <defaultValue>null</defaultValue>
    <label>Project_80_Complete_Date</label>
    <type>DateTime</type>
</CustomField>