force-app/main/default/objects/Opportunity/fields/Project_Completion_History__c.field-meta.xml
<CustomField>
    <fullName>Project_Completion_History__c</fullName>
    <label>Project_Completion_History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>