force-app/main/default/objects/Opportunity/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Project</fullName>
                <default>true</default>
                <label>New Project</label>
            </value>
            <value>
                <fullName>Existing Project</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>